--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1L19mUV0nI0zy_Hf4O7C2TH95NenQ40dd",
-      "authorship_tag": "ABX9TyOd8kOtx5/VjHODKaDmegh5",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOd8kOtx5/VjHODKaDmegh5"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/sharmaanj200/Computer-Vision-IGDTUW/blob/main/Assignment_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "source": [
@@ -58,7 +47,7 @@
         "id": "Ca21XF3fDjMx",
         "outputId": "3203faaf-728e-46a0-90e8-49b3426af658"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +107,7 @@
         "id": "KAjYWpQ9Dok5",
         "outputId": "65d700c4-8e5a-4734-fe6f-f421ae32da6f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +203,7 @@
         },
         "outputId": "cdc8e311-099d-48ab-e234-d16012f2191e"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -293,7 +282,7 @@
         "id": "ZrUBHepIHmhF",
         "outputId": "2d23c025-5b2c-4ca6-aa55-13319b5a3865"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +321,7 @@
         "id": "S0I7LLUSIkHH",
         "outputId": "53b3c00f-d3f6-43a6-e524-7b8335b6d9c5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -371,7 +360,7 @@
         "id": "OEudWu6hKrCx",
         "outputId": "84a33584-43cf-4ffd-d294-8f0161ed69c3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -456,7 +445,7 @@
         "id": "8z9BJt9jK2hg",
         "outputId": "addfbc92-7a45-421a-8523-16b2b6782f40"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -502,7 +491,7 @@
         "id": "TkUoA1GvLYwX",
         "outputId": "9148e5a7-2e38-4788-e3f3-19e509e9327f"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -544,7 +533,7 @@
         "id": "amIAR8WGL41G",
         "outputId": "56d6c6e1-8355-43a7-adc4-2341bdf7ad75"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -653,7 +642,7 @@
         "id": "e86QknJGMJnj",
         "outputId": "53ea3a63-624e-4c37-dd2c-a91a385637ee"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,7 +729,7 @@
         "id": "BHsINEEpQpgh",
         "outputId": "6d76829f-9794-4466-915d-65a9ffc42594"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
